[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
name = "gemm_kernels"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "torch",
]
[tool.setuptools]
packages = ["gemm_kernels"]